--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,59 @@
+# Секретные файлы (НЕ КОММИТИТЬ!)
 .env
+.env.local
+.env.production
+
+# Python
 __pycache__/
-*.pyc
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Логи
 *.log
+logs/
+
+# Временные файлы
+*.tmp
+*.temp
+.DS_Store
+Thumbs.db
+
+# Тестовые файлы
 test_*.py
+debug_*.py
+
+# Кеш
+.cache/
+.pytest_cache/
 
 # Demo and temporary files
 demo_*.py
 *_demo.py
 
-# IDEs and editors
-.vscode/
-.idea/
 # OS specific
 Thumbs.db
 .DS_Store
